<resources>
    <string name="app_name">ECGClaissfier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Patient name</string>
    <string name="nav_header_subtitle">Patient email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="home_second">Home Second</string>
    <string name="instruction">Some basic instruction \n * This model is trained by generic data . \n * This model may predict not accurate results.</string>
    <string name="app_vendor_name">ECG Classifier</string>
    <string name="login_text">Login</string>
    <string name="txt_username">Enter email address</string>
    <string name="txt_password">Enter password</string>
    <string name="action_sign_in">Submit</string>
    <string name="txt_username_error">Put fullname please</string>
    <string name="txt_password_error">Put password please</string>
    <string name="loading">Login</string>
    <string name="txt_login_loading">Please woat...</string>
    <string name="txt_wrong_password">password not available</string>
    <string name="txt_entity">user_data</string>
    <string name="registration_text">Registration</string>
    <string name="txt_phone">Enter phone number</string>
    <string name="txt_email">Enter email address</string>
    <string name="txt_fullname">Enter full name</string>
    <string name="txt_password_error_length">Password length should be greater than 8</string>
    <string name="txt_phone_error">Put phone number please</string>
    <string name="txt_email_error">Put email please</string>
    <string name="txt_registrtion">Do you need new account?</string>
    <string name="menu_history">History</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_logout">Logout</string>
    <string name="txt_lab_test_result">Test results</string>
    <string name="txt_patient_name">Patient email</string>
    <string name="date_creation">Date Creation</string>
    <string name="description">This Statistics show the generic graph from the existing from database</string>
</resources>
