<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:background="@drawable/layout_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="45dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/leftBorderLayout"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:background="@drawable/side_boder"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/leftBorder"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_patient_name"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/leftBorderLayout"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/result"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/leftBorderLayout"
            android:layout_below="@+id/name"
            android:layout_height="wrap_content"
            android:text="@string/txt_lab_test_result"
            android:padding="3dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/createdDate"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/imageSync"
            android:layout_height="wrap_content"
            android:text="@string/date_creation"
            android:padding="10dp"
            android:textSize="10sp"
            />
        <ImageView
            android:layout_width="15dp"
            android:layout_marginTop="5dp"
            android:id="@+id/imageSync"
            android:layout_alignParentRight="true"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:visibility="invisible"

            android:src="@drawable/not_sync"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_toRightOf="@+id/leftBorderLayout"
            android:background="@color/light_grey"
            android:layout_marginLeft="20dp"
            android:layout_alignParentBottom="true"

            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

